<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/mybg">

    <EditText
        android:paddingRight="16dp"
        android:drawableEnd="@drawable/baseline_email_24"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext"
        android:id="@+id/eEmailL"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_below="@+id/tEmail"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textStyle="bold|italic"
        android:autofillHints="emailAddress" />

    <TextView
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="200dp"
        android:id="@+id/tEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:drawablePadding="20dp"
        android:drawableEnd="@drawable/baseline_vpn_key_24"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext"
        android:id="@+id/ePassL"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_below="@+id/tPass"
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:textStyle="italic"
        android:autofillHints="" />

    <TextView
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="90dp"
        android:layout_below="@+id/eEmailL"
        android:id="@+id/tPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <Button
        android:layout_below="@+id/ePassL"
        android:id="@+id/bSigninL"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/create"
        android:text="@string/sign_inb"
        android:layout_marginEnd="25dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:cornerRadius="50dp"
        app:iconTint="#000000"
        app:strokeColor="#000000"
        tools:ignore="RelativeOverlap" />
    <LinearLayout
        android:gravity="center"
        android:padding="5dp"
        android:layout_below="@+id/bSigninL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="50dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/bcreateL"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/create"
            android:text="@string/create_accountt"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:cornerRadius="50dp"
            app:iconTint="#000000"
            app:strokeColor="#000000" />
    </LinearLayout>

    <ImageView
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:layout_width="276dp"
        android:layout_height="191dp"
        app:srcCompat="@drawable/sedan" />

</RelativeLayout>